# Franka_RL

deploy/: CMakeLists.txt  engine_inference.cpp  main.cpp  onnx_inference.cpp  onnx_inference.h  tensorrt_inference.cpp  tensorrt_inference.h
legged_gym/envs/: __init__.py
legged_gym/envs/airbot/tita_airbot/: tita_airbot_only_config.py  tita_airbot_only_robot.py  tita_airbot_rough_only_config.py
legged_gym/envs/base/: base_task.py  legged_robot_config.py
legged_gym/envs/franka/: franka_only_config.py  franka_only_robot.py  franka_rough_only_config.py
legged_gym/envs/tita/: tita.py  tita_flat_config.py  tita_rough_config.py
legged_gym/envs/tita_airbot/: tita_airbot_flat_config.py  tita_airbot_robot.py  tita_airbot_rough_config.py
legged_gym/envs/tita_airbot_copy/: TAF_visual_wholebody_config.py  TAF_visual_wholebody_robot.py  tita_airbot_follow_config.py  tita_airbot_follow_constrain_config.py  tita_airbot_follow_constrain_robot.py  tita_airbot_follow_robot.py
legged_gym/envs/tita_airbot_np3o/: tita_airbot_np3o_config.py  tita_airbot_robot_np3o.py
legged_gym/scripts/: export_policy_as_onnx.py  model.pt  model_12000.pt  model_tita_airbot.pt  play.py  policy_1.pt  sim2sim.py  sim2sim_tita.py  simple_play.py  train.py
legged_gym/utils/: math.py  task_registry.py
resources/robots/Panda/: panda.urdf
resources/robots/airbot/urdf/: airbot.urdf
resources/robots/tita/urdf/: robot.urdf
resources/robots/tita_airbot/urdf/: robot.urdf
resources/robots/tita_airbot_mujuco/: stl_binary_convert.py
resources/robots/tita_airbot_mujuco/urdf/: robot.xml  (+1 more)
(+2 files in other folders)
